Fixed the completely broken CSS

--- a/wp/a2/css/dual_page.css
+++ b/wp/a2/css/dual_page.css
@@ -1,5 +1,5 @@
 /* Style the main content (left) */
-.pageBody .column1 {
+.pageBodyDualPage .column1 {
 	clear: both;
 	margin: 0px auto;
 	float: left;
@@ -11,7 +11,7 @@
 }
 
 /* Style the aside content (right) */
-.pageBody .column2 {
+.pageBodyDualPage .column2 {
 	padding-left: 2%;
 	float: left;
 	min-width: 320px;
