--- a/wp/a2/css/single_page.css
+++ b/wp/a2/css/single_page.css
@@ -5,7 +5,7 @@
 	background-size: 700px 700px;
 }
 
-.pageBody .singlePage {
+.pageBody {
 	clear: both;
 	margin: 1% auto;
 	float: left;
